# Dev_Pet

./: .gitignore  README.md  gen-icon.mjs  index.html  package-lock.json  package.json  vite.config.js
hooks/: claude-approve.ps1  claude-notify.ps1
scripts/: release.mjs
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  watcher.rs
