[package]
name = "dev-pet"
version = "0.1.0"
description = "귀여운 개발자 시스템 모니터링 펫"
edition = "2021"
# 앱 본체 바이너리 지정 (codex-forward 보조 바이너리와 구분 → tauri 번들이 올바른 exe 사용)
default-run = "dev-pet"

[lib]
name = "dev_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tiny_http = "0.12"
open = "5"
time = { version = "0.3", features = ["parsing"] }
ureq = "2"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
