[package]
name = "dev-pet"
version = "0.2.3"
description = "귀여운 개발자 시스템 모니터링 펫"
edition = "2021"
default-run = "dev-pet"

[lib]
name = "dev_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-winrt-notification = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tiny_http = "0.12"
open = "5"
time = { version = "0.3", features = ["parsing"] }
ureq = "2"
winreg = "0.52"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_UI_Shell"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
